fix  # 修复共享屏幕多次点击导致窗口列表堆积问题

--- a/huawei-rtc-electron/src/index.html
+++ b/huawei-rtc-electron/src/index.html
@@ -2,7 +2,7 @@
  * @Author: Yandong Hu
  * @github: https://github.com/Mad-hu
  * @Date: 2021-08-03 09:37:35
- * @LastEditTime: 2021-09-10 15:32:23
+ * @LastEditTime: 2021-10-09 13:40:37
  * @LastEditors: Yandong Hu
  * @Description:
 -->
@@ -51,6 +51,7 @@
             .join('')
         );
       }
+      const webview = document.getElementById('webview-0');
     </script>
   </body>
 </html>
